--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "npm": "1.4.x"
   },
   "devDependencies": {
-    "glob": "^4.0.5",
-    "gulp": "^3.8.7",
-    "gulp-concat": "^2.3.4",
-    "gulp-jshint": "^1.8.4",
-    "gulp-less": "^1.3.6",
-    "gulp-livereload": "^2.1.0",
-    "gulp-uglify": "^0.3.1",
-    "gulp-util": "^3.0.0",
-    "jshint-stylish": "^0.4.0"
+      "glob": "^4.0.5",
+      "gulp": "^3.8.7",
+      "gulp-concat": "^2.3.4",
+      "gulp-jshint": "^1.8.4",
+      "gulp-ruby-sass": "^0.7.1",
+      "gulp-uglify": "^0.3.1",
+      "gulp-util": "^3.0.0",
+      "jshint-stylish": "^0.4.0"
   }
 }
