--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -72,7 +72,10 @@ Vagrant.configure("2") do |config|
   # Box URL if not already available on the system
   config.vm.box_url = "http://focus-43.com/files/1913/8670/0974/precise64-pristine.box"
   # Mount shared folder
-  config.vm.synced_folder "../", "/home/vagrant/app"
+  config.vm.synced_folder "../", "/home/vagrant/app", id:"vagrant-root",
+    owner: "vagrant",
+    group: "www-data",
+    mount_options: ["dmode=775,fmode=664"]
   # SSH
   config.ssh.forward_agent = true
   # Port forwarding
