--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,11 +13,7 @@ Vagrant.configure("2") do |config|
 
   # This vagrant directory should always be within the project root; below we mount the parent folder
   # into the vm at /home/vagrant/app
-  config.vm.synced_folder "../", "/home/vagrant/app"
-
-  # Above we mount the parent, but by default no directories are writable-to by apache. This
-  # mounts the files/ directory (the ONLY one that should be writable) with different permissions.
-  config.vm.synced_folder "../web/application/files", "/home/vagrant/app/web/application/files",
+  config.vm.synced_folder "../", "/home/vagrant/app",
     owner: "vagrant",
     group: "www-data",
     mount_options: ["dmode=775,fmode=664"]
